# PRCV-VSLAM-Challenge-2022

./: README.md
README/: LIO-SAM-6AXIS-INTENSITY&type=Date-16604675791593.svg+xml
doc/: vslam_evaluation.md
prcv2022_evaluation/: README.md
prcv2022_evaluation/benchmark/estimated/report/: PRCV2022.yaml
prcv2022_evaluation/benchmark/estimated/traj/: 20220216_garden_day.txt  eval_cfg.yaml
prcv2022_evaluation/evaluation/: CMakeLists.txt  package.xml
prcv2022_evaluation/evaluation/rpg_trajectory_evaluation/: CMakeLists.txt  README.md  setup.py
prcv2022_evaluation/evaluation/rpg_trajectory_evaluation/scripts/: add_eval_cfg_recursive.py  add_path.py  analyze_trajectories.py  analyze_trajectories_PRCV2022.py  analyze_trajectories_PRCV2022_py3.py  analyze_trajectory_single.py  change_eval_cfg_recursive.py  fn_constants.py  overall_odometry_errors.py  rule_score_PRCV2022.py
prcv2022_evaluation/evaluation/rpg_trajectory_evaluation/scripts/dataset_tools/: asl_groundtruth_to_pose.py  bag_to_pose.py  pose_to_bag.py  stamp_state_est.py  stamp_state_est_using_matches.py  strip_gt_id.py  transform_trajectory.py
prcv2022_evaluation/evaluation/rpg_trajectory_evaluation/src/rpg_trajectory_evaluation/: align_trajectory.py  align_utils.py  associate_timestamps.py  compute_trajectory_errors.py  metrics.py  multiple_traj_errors.py  plot_utils.py  results_writer.py  trajectory.py  trajectory_FusionPortable.py  trajectory_loading.py  trajectory_utils.py  transformations.py
prcv2022_evaluation/evaluation/script/bash/: run_traj_eval_PRCV2022.sh
